openmolar (0.3.8+bzr0820-0~__DIST__0) __DIST__; urgency=low

  * bugfix for 0.3.8

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 May 2013 15:23:34 +0100


openmolar (0.3.8+bzr0819-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 May 2013 11:23:56 +0100


openmolar (0.3.7+bzr0818-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 11 May 2013 00:09:39 +0100


openmolar (0.3.7+bzr0816-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 30 Apr 2013 18:19:43 +0100


openmolar (0.3.7+bzr0815-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 30 Apr 2013 16:44:16 +0100


openmolar (0.3.6+bzr0814-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 23:01:17 +0100


openmolar (0.3.5+bzr0813-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 00:28:05 +0100


openmolar (0.3.5+bzr0812-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 00:01:28 +0100


openmolar (0.3.4+bzr0807-1~__DIST__0) __DIST__; urgency=low

  * rebuild

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 17 Apr 2013 21:16:10 +0100


openmolar (0.3.4+bzr0807-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 17 Apr 2013 21:00:13 +0100


openmolar (0.3.3+bzr0805-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 04 Mar 2013 11:09:10 +0000


openmolar (0.3.2+bzr0804-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 01 Mar 2013 13:35:31 +0000

