@@ -48,7 +48,8 @@ class AppointmentWidget(QtGui.QFrame):
 
     #signal has dent, time, length
     slotClicked = QtCore.pyqtSignal(object, object, object)
-
+    print_mh_signal = QtCore.pyqtSignal(object)
+    
     def __init__(self, sTime, fTime, om_gui):
         QtGui.QFrame.__init__(self, om_gui)
 
@@ -722,6 +723,9 @@ class appointmentCanvas(QtGui.QWidget):
             elif result.text() == _("Block or use this space"):
                 self.block_use_space(qstart, qfinish)
 
+            elif result.text() == _("Print A Medical Form"):
+                self.pWidget.print_mh_signal.emit(tuple(selectedPatients))
+
         yOffset = self.height() / self.slotNo
         row=event.y()//yOffset
 
@@ -742,10 +746,13 @@ class appointmentCanvas(QtGui.QWidget):
 
             if selectedPatients[0]>0:
                 actions.append(_("Load Patient"))
+    
                 actions.append(None)
                 actions.append(_("Add/Edit Memo"))
                 actions.append(_("Cancel Appointment"))
-
+                actions.append(None)
+                actions.append(_("Print A Medical Form"))
+    
                 self.pWidget.emit(QtCore.SIGNAL("PatientClicked"),
                     tuple(selectedPatients))
             else:
