@@ -1,3 +1,10 @@
+openmolar (0.3.8+bzr0822-0~__DIST__0) __DIST__; urgency=low
+
+  * reinstated address search when no relatives linked
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 May 2013 23:17:09 +0100
+
+
 openmolar (0.3.8+bzr0820-0~__DIST__0) __DIST__; urgency=low
 
   * bugfix for 0.3.8
